<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CrazyNudgemail</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="message_hint">Type your message here, first 64 characters will be used as Subject ..</string>
    <string name="hour_option1">1h</string>
    <string name="hour_option2">2h</string>
    <string name="hour_option3">4h</string>
    <string name="hour_option4">6h</string>
    <string name="hour_option5">8h</string>
    <string name="hour_option6">12h</string>
    
    <string name="day_option1">1day</string>
    <string name="day_option2">2days</string>
    <string name="day_option3">4days</string>
    
    <string name="date">Date</string>
    <string name="more_options">&#8230;</string>

</resources>